Minor text enhancements

--- a/PrimeNumbersPython.ipynb
+++ b/PrimeNumbersPython.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "### Development\n",
     "\n",
-    "From the definition (1) above, checking if an integer $n$ is a prime number is quite straight, we only need to check if it is a multiple of any integer $i \\in \\big[2,n\\big]$, if it isn't, then $n$ is a prime number. \n",
+    "From the definition (1) above, checking if an integer $n$ is a prime number is quite straight, we only need to check if it is a multiple of any integer $i \\in \\big[2,n\\big)$, if it isn't, then $n$ is a prime number. \n",
     "\n",
     "A integer $n$ is multiple of $i$ when the operation $n \\div i$ results in a integer, or in other words the operation leaves remainder zero. Let's define a function to check it for the given $n$."
    ]
@@ -145,7 +145,9 @@
     "\n",
     "The definition (3) can help us speed things up, let's dive into it.\n",
     "\n",
-    "If $c_1=p\\, k_1$ and $c_2=c_1\\, x$, then $c_2=(p\\, k_1)x = p\\, k_2$.\n",
+    "If $c_1=p\\, k_1$ and $c_2=c_1\\, x$,\n",
+    "\n",
+    "then $c_2=(p\\, k_1)x = p\\, k_2$.\n",
     "\n",
     "Meaning that we only need to test if the elements in the list $\\big[2,n\\big]$ are multiples of prime numbers, and not, as did our initial function, testing them for each integer less than or equal to $n$, e.g. to check if $11$ is prime, we test if it is multiple of $\\big\\{2,3,5,7\\big\\}$ only.\n",
     "\n",
@@ -214,7 +216,7 @@
     "\n",
     "Second we use definition (4), to recall it, if $c=p\\,k$, then $c\\div p=k$ and $c\\div k=p$.\n",
     "\n",
-    "An example, the divisors of $16$ are $\\big\\{1,2,4,8,16\\big\\}$, when $16$ is divided by any of its divisors the result is other of of its divisors.\n",
+    "An example, the divisors of $16$ are $\\big\\{1,2,4,8,16\\big\\}$, when $16$ is divided by any of its divisors the result is also one of of its divisors.\n",
     "- $16\\div 1 = 16$\n",
     "- $16\\div 2 = 8$\n",
     "- $16\\div 4 = 4$\n",
@@ -225,7 +227,7 @@
     "\n",
     "Let's see $24$ and its divisors $\\big\\{1,2,3,4,6,8,12,24\\big\\}$, this time we would divide $24$ by $\\big\\{1,2,3,4\\big\\}$ to find all of its divisors. If you think about a number like $1e5$, then the definition (4) turns out to be a huge time saving resource.\n",
     "\n",
-    "What is even more interesting is that $\\sqrt{16}=4$ and $\\sqrt{24}\\cong 4.90$. It is not a coincidence that for $16$ and $24$ we could divide up to $4$. One way to illustrate it is using geometry, which are the possible different rectangles with area $16\\,\\textrm{mm}^2$, considering only integers? The answer, $1\\times 16$, $2\\times 8$ and $4\\times 4$, the last one is the square of side $\\sqrt{16}=4$, after that we start to repeat the rectangles.\n",
+    "What is even more interesting is that $\\sqrt{16}=4$ and $\\sqrt{24}\\cong 4.90$. It is not a coincidence that for $16$ and $24$ we could divide up to $4$. One way to illustrate it is using geometry. For example, which are the possible different rectangles with area $16\\,\\textrm{mm}^2$, considering only integers? The answer, $1\\times 16$, $2\\times 8$ and $4\\times 4$, the last one is the square of side $\\sqrt{16}=4$, after that we start to repeat the rectangles.\n",
     "\n",
     "Back to our prime numbers, to check if an integer $n$ is prime, it is enough to test if it is multiple of the prime numbers $p\\leq \\sqrt{n}$, this is a time saving resource as well.\n",
     "\n",
@@ -418,7 +420,7 @@
    "source": [
     "Actually, it was quite the same performance as the previous one, but we could try it using *Numpy* and see how it performs.\n",
     "\n",
-    "*Numpy* uses arrays instead of lists to manipulate data, it holds powerfull mathematical resources, it requires less memory and its processing is faster than using lists, these differences make enormous advantage when dealing large amount of data.\n",
+    "*Numpy* uses arrays instead of lists to manipulate data, it holds powerfull mathematical resources, it requires less memory and its processing is faster than using lists, these differences make enormous advantage when dealing with large amount of data.\n",
     "\n",
     "*Numpy* also has easier sintaxe, e.g. the mask we made for the list previously is included directly as array selection criteria in a single line of code.\n",
     "\n",
