LICENSE.md and primenumbers.py added, README.md and PrimeNumbersPython.ipynb updated.

--- a/PrimeNumbersPython.ipynb
+++ b/PrimeNumbersPython.ipynb
@@ -485,6 +485,8 @@
     "\n",
     "You could try *Numpy* in the first version, the aggregation approach, and see what happens.\n",
     "\n",
+    "The Python file *primenumbers.py* in the root of this repository contains the last version of our function.\n",
+    "\n",
     "---"
    ]
   },
