Minor text improvements

--- a/PrimeNumbersPython.ipynb
+++ b/PrimeNumbersPython.ipynb
@@ -37,9 +37,9 @@
    "source": [
     "### Development\n",
     "\n",
-    "From the definition (1) above, checking if an integer $n$ is a prime number is quite straight, we only need to check if it is a multiple of any integer $i \\in \\big[2,n\\big)$, if it isn't, then $n$ is a prime number. \n",
+    "From the definition (1) above, checking if an integer $n$ is a prime number is quite straight, we only need to check if it is multiple of any integer $i \\in \\big[2,n\\big)$, if it isn't, then $n$ is prime number. \n",
     "\n",
-    "A integer $n$ is multiple of $i$ when the operation $n \\div i$ results in a integer, or in other words the operation leaves remainder zero. Let's define a function to check it for the given $n$."
+    "An integer $n$ is multiple of $i$ when the operation $n \\div i$ results in an integer, or in other words the operation leaves remainder equals to zero. Let's define a function to check it for a given $n$."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now a quick test using an short interval containing some well known primes - $\\big[2,11\\big]$."
+    "Now a quick test using a short interval containing some well known primes $\\big[2,11\\big]$."
    ]
   },
   {
@@ -101,11 +101,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For checking results of higher magnitude, the *Wikipedia* page https://en.wikipedia.org/wiki/List_of_prime_numbers can be used, they have the list of the first one thousand primes.\n",
+    "To check results of higher magnitude, the *Wikipedia* page https://en.wikipedia.org/wiki/List_of_prime_numbers can be used, they have the list of the first one thousand primes.\n",
     "\n",
-    "Next we test it with a larger list, up to $100000$, the interval $\\big[2,1e5\\big]$, and check how long does it take to run. The resulting list is going to be huge, then we count the primes to keep it simple.\n",
+    "Next we can test it with a larger list with $100000$ integers, the interval $\\big[2,1e5\\big]$, and check how long it takes to run. The resulting list is going to be huge, to keep it simple, we only count the primes.\n",
     "\n",
-    "The execution time depends on the equipment being used, here it is used to compare perfomance between versions."
+    "The execution time depends on the equipment being used, here it is used only to compare perfomance between versions."
    ]
   },
   {
@@ -139,17 +139,17 @@
    "source": [
     "The function to check if a number is prime works, but for checking a huge list of numbers its performance does not impress anyone.\n",
     "\n",
-    "Let's try a different approach, instead of testing unique integers, for a give $n$, our function should return the list of primes in the the interval $\\big[2,n\\big]$.\n",
+    "Let's try a different approach, instead of testing unique integers, it would be better to return the list of primes in the the interval $\\big[2,n\\big]$,  for a give $n$.\n",
     "\n",
-    "According to definition (1), prime numbers are greater than one, if $n<2$ we simply return an empty list.\n",
+    "According to definition (1), prime numbers are greater than one, then if $n<2$ is passed as parameter we simply return an empty list.\n",
     "\n",
-    "The definition (3) can help us speed things up, let's dive into it.\n",
+    "The definition (3) can help us to speed things up, let's dive into it.\n",
     "\n",
     "If $c_1=p\\, k_1$ and $c_2=c_1\\, x$,\n",
     "\n",
     "then $c_2=(p\\, k_1)x = p\\, k_2$.\n",
     "\n",
-    "Meaning that we only need to test if the elements in the list $\\big[2,n\\big]$ are multiples of prime numbers, and not, as did our initial function, testing them for each integer less than or equal to $n$, e.g. to check if $11$ is prime, we test if it is multiple of $\\big\\{2,3,5,7\\big\\}$ only.\n",
+    "Meaning that we only need to test if the elements in the interval $\\big[2,n\\big]$ are multiples of prime numbers, and not, as did our initial function, testing them for each single integer less than or equal to $n$, e.g. to check if $11$ is prime, we test if it is multiple of $p=\\big\\{2,3,5,7\\big\\}$ only.\n",
     "\n",
     "The new function builds up a list of primes, which is initiated as \\[2\\], then it tests if $3$ is multiple of any element in the list, at this point only the $2$, if it isn't, then $3$ is added to the primes list \\[2,3\\]. Next it tests $4$ in the same way, and so on."
    ]
@@ -212,24 +212,24 @@
    "source": [
     "Much better than previous performance, but we can improve it more.\n",
     "\n",
-    "First, using definition (3) again. We already know that $2$ is prime and all even numbers can be written as $n=2k$, that means they are all composite numbers multiples of $2$. We will just skip them during the iteration, this will remove half of the elements in the list.\n",
+    "First, using definition (3) again. We already know that $2$ is prime and all even numbers can be written as $n=2k$, that means they are all composite numbers multiples of $2$. We will just skip them during the iteration, this will remove half of the elements to be check.\n",
     "\n",
     "Second we use definition (4), to recall it, if $c=p\\,k$, then $c\\div p=k$ and $c\\div k=p$.\n",
     "\n",
-    "An example, the divisors of $16$ are $\\big\\{1,2,4,8,16\\big\\}$, when $16$ is divided by any of its divisors the result is also one of of its divisors.\n",
+    "An example, the divisors of $16$ are $d=\\big\\{1,2,4,8,16\\big\\}$, when $16$ is divided by any of its divisors the result is also one of of its divisors.\n",
     "- $16\\div 1 = 16$\n",
     "- $16\\div 2 = 8$\n",
     "- $16\\div 4 = 4$\n",
     "- $16\\div 8 = 2$\n",
     "- $16\\div 16 = 1$\n",
     "\n",
-    "Nothing new here, but according to the defnition (4) we only would need to divide $16$ by $\\big\\{1,2,4\\big\\}$ to find all of its divisors, this is interesting, right?\n",
+    "Nothing new here, but according to the defnition (4) we only would need to divide $16$ by $d_1=\\big\\{1,2,4\\big\\}$ to find all of its divisors, this is interesting, right?\n",
     "\n",
-    "Let's see $24$ and its divisors $\\big\\{1,2,3,4,6,8,12,24\\big\\}$, this time we would divide $24$ by $\\big\\{1,2,3,4\\big\\}$ to find all of its divisors. If you think about a number like $1e5$, then the definition (4) turns out to be a huge time saving resource.\n",
+    "Let's see $24$ and its divisors $d=\\big\\{1,2,3,4,6,8,12,24\\big\\}$, this time we would divide $24$ by $d_1\\big\\{1,2,3,4\\big\\}$ to find all of its divisors. If you think about a number like $1e5$, then the definition (4) turns out to be a huge time saving resource.\n",
     "\n",
-    "What is even more interesting is that $\\sqrt{16}=4$ and $\\sqrt{24}\\cong 4.90$. It is not a coincidence that for $16$ and $24$ we could divide up to $4$. One way to illustrate it is using geometry. For example, which are the possible different rectangles with area $16\\,\\textrm{mm}^2$, considering only integers? The answer, $1\\times 16$, $2\\times 8$ and $4\\times 4$, the last one is the square of side $\\sqrt{16}=4$, after that we start to repeat the rectangles.\n",
+    "What is even more interesting is that $\\sqrt{16}=4$ and $\\sqrt{24}\\cong 4.90$. It is not a coincidence that for $16$ and $24$ we could divide up to $4$. One way to illustrate it is using geometry. For example, which are the possible different rectangles with area $16\\,\\textrm{mm}^2$, considering only integers? The answer, $1\\times 16$, $2\\times 8$ and $4\\times 4$, the last one is the square of side $\\sqrt{16}=4$, after that we start to repeat the same rectangles.\n",
     "\n",
-    "Back to our prime numbers, to check if an integer $n$ is prime, it is enough to test if it is multiple of the prime numbers $p\\leq \\sqrt{n}$, this is a time saving resource as well.\n",
+    "Back to our prime numbers, to check if an integer $n$ is prime, it is enough to test if $n$ is multiple of the prime numbers $p\\leq \\sqrt{n}$, this is a time saving resource as well.\n",
     "\n",
     "Great, let's enhance our function with these two additional resources and see if it really gets faster."
    ]
@@ -295,24 +295,24 @@
    "source": [
     "This was a good impromevent in performance, right?\n",
     "\n",
-    "So far we have built a list of prime numbers in the interval $\\big[2,n\\big]$, but you could change it to find the list of the first $n$ primes, only changing the *while* test to check the length of the *primes* list - \"*while len(primes) <= n:*\".\n",
+    "So far we have built a list of prime numbers in the interval $\\big[2,n\\big]$, but you could change it to find the list of the first $n$ primes only changing the *while* test to check the length of the primes list - \"*while len(primes) <= n:*\".\n",
     "\n",
     "This first approach was done by aggregation, building up the primes list, and with some mathematical resources we could improve performance. Next we try a different approach, by exclusion let's say, we start with the whole list of integers, then we remove all the composite numbers from it\n",
     "\n",
     "How does that work?\n",
     "\n",
-    "We initiate the list using the interval $\\big[2,n\\big]$ and set the primes list to $[]$. We start with $2$, removing all its multiples ($n=2k$) from the original list and then we include the $2$ itself into the primes list.\n",
+    "We initiate the list using the interval $\\big[2,n\\big]$ and set the primes list to $[\\,]$. We take the fisrt element of the list, $2$, and remove all its multiples ($n=2k$) from the list, then we include the $2$ itself into the primes list.\n",
     "\n",
-    "After that we take the new first element of the list, which should be $3$, and do the same, remove all its multiples ($n=3k$) from the list, include it to the primes list, and take the new first element, $5$, because $4$ was removed as multiple of $2$.\n",
+    "After that we take the new first element of the list, which should be $3$, and do the same, remove all its multiples ($n=3k$) from the list, include it to the primes list, and take the new first element, $5$, because $4$ was removed as it is multiple of $2$.\n",
     "\n",
-    "As we previously saw, it is enough to do it when $n\\leq \\sqrt{n}$, after that should not remain any composite number to be removed. This is great, don't you think?"
+    "As we previously saw, it is enough to do it when $p\\leq \\sqrt{n}$, after that it should not remain any composite number to be removed. This is great, don't you think?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see an example with the interval $\\big[2,30\\big]$, keeping in mind that $\\sqrt{30}=5,48$\n",
+    "Let's see an example with the interval $\\big[2,30\\big]$, keeping in mind that $\\sqrt{30}\\cong 5.48$.\n",
     "\n",
     "| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | |\n",
     "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
@@ -418,9 +418,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Actually, it was quite the same performance as the previous one, but we could try it using *Numpy* and see how it performs.\n",
+    "Actually, it was quite the same performance as the previous one, but we could try to use *Numpy* and see how it performs.\n",
     "\n",
-    "*Numpy* uses arrays instead of lists to manipulate data, it holds powerfull mathematical resources, it requires less memory and its processing is faster than using lists, these differences make enormous advantage when dealing with large amount of data.\n",
+    "*Numpy* uses arrays instead of lists to manipulate data, it holds powerfull mathematical resources, requires less memory and its processing is faster than using lists, these differences make enormous advantage when dealing with large amounts of data.\n",
     "\n",
     "*Numpy* also has easier sintaxe, e.g. the mask we made for the list previously is included directly as array selection criteria in a single line of code.\n",
     "\n",
@@ -485,7 +485,7 @@
     "\n",
     "You could try *Numpy* in the first version, the aggregation approach, and see what happens.\n",
     "\n",
-    "The Python file *primenumbers.py* in the root of this repository contains the last version of our function.\n",
+    "The *Python* file *primenumbers.py* in the root of this repository contains the last version of our function.\n",
     "\n",
     "---"
    ]
@@ -496,7 +496,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "In this notebook we have developed a function using *Python* to generate prime numbers. Its performance could be improved based on mathematical background, which was explained along with the code."
+    "In this notebook we have developed a function using *Python* to generate a list of prime numbers. Its performance could be improved based on mathematical background, which was explained along with the code."
    ]
   }
  ],
